// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alpinejs.twig - twig-verify > alpinejs.twig 1`] = `
<div x-data="{ open: false }">
    ...
</div>

<div x-bind:class="! open ? 'hidden' : ''">
  ...
</div>

<button x-on:click="open = ! open">
  Toggle
</button>

<div>
  Copyright ©

  <span x-text="new Date().getFullYear()"></span>
</div>

<div x-html="(await axios.get('/some/html/partial')).data">
  ...
</div>

<div x-data="{ search: '' }">
  <input type="text" x-model="search">

  Searching for: <span x-text="search"></span>
</div>

<div x-show="open">
  ...
</div>

<div x-show="open" x-transition>
  ...
</div>

<template x-for="post in posts">
  <h2 x-text="post.title"></h2>
</template>

<template x-if="open">
  <div>...</div>
</template>

<div x-init="date = new Date()"></div>

<div x-effect="console.log('Count is '+count)"></div>

<input type="text" x-ref="content">
<button x-on:click="navigator.clipboard.writeText($refs.content.value)">
  Copy
</button>

<div x-cloak>
  ...
</div>

<div x-ignore>
  ...
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div x-data="{ open: false }">
    ...
</div>

<div x-bind:class="! open ? 'hidden' : ''">
    ...
</div>

<button x-on:click="open = ! open">Toggle</button>

<div>
    Copyright ©

    <span x-text="new Date().getFullYear()"></span>
</div>

<div x-html="(await axios.get('/some/html/partial')).data">
    ...
</div>

<div x-data="{ search: '' }">
    <input type="text" x-model="search" />Searching for: <span x-text="search"></span>
</div>

<div x-show="open">
    ...
</div>

<div x-show="open" x-transition>
    ...
</div>

<template x-for="post in posts">
    <h2 x-text="post.title"></h2>
</template>

<template x-if="open">
    <div>
        ...
    </div>
</template>

<div x-init="date = new Date()"></div>

<div x-effect="console.log('Count is '+count)"></div>

<input type="text" x-ref="content" />
<button x-on:click="navigator.clipboard.writeText($refs.content.value)">
    Copy
</button>

<div x-cloak>
    ...
</div>

<div x-ignore>
    ...
</div>

`;

exports[`attributes.twig - twig-verify > attributes.twig 1`] = `
<a href="#abcd"  target="_blank"   lang="en" >Link</a>

<fantasy {{ {
    id: accommodation.id.id,
    ref: intersectionObserver | default,
    class: 'hotel-item item-order__list-item js_co_item',
    'data-co_alt_htl': isAlternative ? '1'
} | attrs }}>Test</fantasy>

<!-- Remove extra spaces in attribute values -->
<div id="pspIframe " class="  red   hot  ">abcd</div>

<input type="text" name="fromName" value="{{ fromName ?? ' ' }}" />
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<a href="#abcd" target="_blank" lang="en">Link</a>

<fantasy {{ {
        id: accommodation.id.id,
        ref: intersectionObserver|default,
        class: 'hotel-item item-order__list-item js_co_item',
        'data-co_alt_htl': isAlternative ? '1'
    }|attrs }}>
    Test
</fantasy>

<!-- Remove extra spaces in attribute values -->
<div id="pspIframe" class="red hot">
    abcd
</div>

<input type="text" name="fromName" value="{{ fromName ?? ' ' }}" />

`;

exports[`breakingSiblings.twig - twig-verify > breakingSiblings.twig 1`] = `
<span>One</span><b>Two</b><i>Three</i><span>Four</span><b>Five</b><i>Six</i><span>Seven</span>

<span>One</span>
<b>Two</b>
<i>Three</i>
<span>Four</span>
<b>Five</b>
<i>Six</i>
<span>Seven</span>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span>One</span><b>Two</b><i>Three</i><span>Four</span><b>Five</b><i>
    Six
</i><span>Seven</span>

<span>One</span>
<b>Two</b>
<i>Three</i>
<span>Four</span>
<b>Five</b>
<i>Six</i>
<span>Seven</span>

`;

exports[`children.twig - twig-verify > children.twig 1`] = `
<div class="{{ css.loader }}">
    <div class="{{ css.barWrapper }}">
        <span class="{{ css.bar }}"></span>
    </div>
    <strong class="{{ css.text }}">{{ 'checking_deals' }}</strong>
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div class="{{ css.loader }}">
    <div class="{{ css.barWrapper }}">
        <span class="{{ css.bar }}"></span>
    </div>
    <strong class="{{ css.text }}">{{ 'checking_deals' }}</strong>
</div>

`;

exports[`emptyLines.twig - twig-verify > emptyLines.twig 1`] = `
<div>
    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained">


    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained">
</div>

<div>
    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />

    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>
    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />

    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />
</div>

<div>
    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />

    <img src="/img/posts/08/07/dns-resolution-expl.png" alt="DNS explained" />
</div>

`;

exports[`extraSpaces.twig - twig-verify > extraSpaces.twig 1`] = `
<span  >Text</span >
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span>Text</span>

`;

exports[`manyAttributes.twig - twig-verify > manyAttributes.twig 1`] = `
<span attr1="one" attr2="two" attr3="three" attr4="four" attr5="five" attr6="six" attr7="seven" attr8="eight">Text</span>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span attr1="one"
    attr2="two"
    attr3="three"
    attr4="four"
    attr5="five"
    attr6="six"
    attr7="seven"
    attr8="eight">
    Text
</span>

`;

exports[`oneLine.twig - twig-verify > oneLine.twig 1`] = `
<a href="{{ url }}">
    Next
</a>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<a href="{{ url }}">Next</a>

`;

exports[`selfClosing.twig - twig-verify > selfClosing.twig 1`] = `
<input type="text" name="user" />

<input attr1="one" attr2="two" attr3="three" attr4="four" attr5="five" attr6="six" attr7="seven" attr8="eight" />

<input type="text" name="user" /><input type="text" name="password" /><input type="text" name="password2" />
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<input type="text" name="user" />

<input attr1="one"
    attr2="two"
    attr3="three"
    attr4="four"
    attr5="five"
    attr6="six"
    attr7="seven"
    attr8="eight" />

<input type="text" name="user" />
<input type="text" name="password" />
<input type="text" name="password2" />

`;

exports[`siblings.twig - twig-verify > siblings.twig 1`] = `
<span>One</span><b>Two</b><i>Three</i>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span>One</span><b>Two</b><i>Three</i>

`;

exports[`whitespace.twig - twig-verify > whitespace.twig 1`] = `
<span class="price">{{ price }} {{ currencySymbol }}</span>

<span class="price">Price: {{ price }} {{ currencySymbol }} per night</span>

<span class="price">This accommodation is {{ price }} {{ currencySymbol }} per night</span>

<div>
    Gallia   est omnis divisa in {{ "partes tres" }}, quarum unam incolunt Belgae, aliam Aquitani, tertiam, qui ipsorum lingua Celtae, nostra Galli appellantur.

    Gallien in   seiner Gesamtheit zerfällt in <span>drei Teile</span>. Den einen bewohnen die Belger, einen anderen die Aquitaner und den dritten die, die sich selbst Kelten nennen, in unserer Sprache aber Gallier heißen.

    All Gaul is divided    into three 
    parts, one of which the Belgae inhabit, 
    the Aquitani another, those who in their
     own language are called Celts, 
       in our Gauls, the third.
</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<span class="price">{{ price }} {{ currencySymbol }}</span>

<span class="price">Price: {{ price }} {{ currencySymbol }} per night</span>

<span class="price">
    This accommodation is {{ price }} {{ currencySymbol }} per night
</span>

<div>
    Gallia est omnis divisa in {{ 'partes tres' }}, quarum unam incolunt Belgae,
    aliam Aquitani, tertiam, qui ipsorum lingua Celtae, nostra Galli
    appellantur.

    Gallien in seiner Gesamtheit zerfällt in <span>drei Teile</span>. Den einen
    bewohnen die Belger, einen anderen die Aquitaner und den dritten die, die
    sich selbst Kelten nennen, in unserer Sprache aber Gallier heißen.

    All Gaul is divided into three parts, one of which the Belgae inhabit, the
    Aquitani another, those who in their own language are called Celts, in our
    Gauls, the third.
</div>

`;
